// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordButton must match the snapshot with defaultProps 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding: 0;
  border: none;
  background: transparent;
  background-color: transparent;
}

<button
  aria-hidden={true}
  className="c0"
  tabIndex={0}
>
  <svg
    icon="eye"
    lib="@fortawesome/react-fontawesome"
    prefix="fas"
  />
</button>
`;

exports[`PasswordButton must return the diff between snapshot when password is displayed vs hidden 1`] = `
Snapshot Diff:
- First value
+ Second value

  <button
    aria-hidden={true}
-   className="sc-1wm8iti-1 ntcd9w-9 fbihzC"
+   className="sc-1wm8iti-1 fncopd"
    tabIndex={0}
  >
    <svg
-     icon="eye-slash"
+     icon="eye"
      lib="@fortawesome/react-fontawesome"
      prefix="fas"
    />
  </button>
`;

exports[`PasswordButton must return the diff between snapshot with a negative vs a postive Tab Index 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,9 +1,9 @@
  <button
    aria-hidden={true}
    className="sc-1wm8iti-1 fncopd"
-   tabIndex="-1"
+   tabIndex="0"
  >
    <svg
      icon="eye"
      lib="@fortawesome/react-fontawesome"
      prefix="fas"
`;
